main.css
* {
	box-sizing: border-box;
}

body {
	background: #070415;
	padding: 0;
	text-align: center;
}

h1 {
	font-family: "Raleway", sans-serif;
	font-weight: 700;
	font-size: 3em;
	color: rgba(255, 255, 255, 0.9);
	text-decoration: underline;
	margin: 0.5em 0 3px 0;
}

h2 {
	font-family: "Poiret One", cursive;
	font-size: 1.5em;
	color: white;
	margin-bottom: 3px;
}

.options, .desc {
	display: inline-block;
	height: auto;
	width: 94%;
	line-height: 0;
	text-align: center;
	margin: 1em 3vh;
	border-radius: 0.5em;
	padding: 1.5em;
	background: rgba(255, 255, 255, 0.1);
	font-family: "Raleway", sans-serif;
}
.disclaimer {
	display: inline-block;
	padding: 0.5em;
}

.desc{
	line-height: 1.25;
}

h3 {
	text-align: left;
	color: white;
	font-family: 'Raleway', sans-serif;
	font-weight: 600;
	font-size: 1.5em;
	margin-left: 1.5em;
}

.options, .desc {
	color: white;
	font-size: 1.25em;
	padding-top: 1em;
	padding-bottom: 1em;
}
.desc code {
	background-color:  rgba(255, 255, 255, 0.2);
	border-radius: 0.25em;
	padding: 0 0.25em;
	
}
a:visited {
	color: lightgrey;
}
a:hover, a:active {
	color: white;
}

.options * + * {
	margin-top: 0.5em;
}

input[type="file"] {
	width: 0.1px;
	height: 0.1px;
	opacity: 0;
	overflow: hidden;
	position: absolute;
	z-index: -1;
}

input[type="file"] + label {
	font-size: 1.25em;
	font-weight: 700;
	color: black;
	background-color: white;
	font-size: 1.25rem;
	font-weight: 700;
	max-width: 100%;
	text-overflow: ellipsis;
	white-space: nowrap;
	cursor: pointer;
	display: inline-block;
	overflow: hidden;
	padding: 0.625rem 1.25rem;
	border-radius: 4px;
	position: relative;
	line-height: 1.15;
	vertical-align: middle;
	z-index: 10;
	display: inline-block;
	transition: all 0.5s ease;
	cursor: pointer;
	/* "hand" cursor */
	opacity: 1;
	transition: all 1s ease;
}

input[type="file"]:focus + label,
input[type="file"] + label:hover {
	background-color: #070415;
	color: white;
	opacity: 1;
}


.dropZone {
	width: 100%;
	background-color: rgba(255,255,255,0.2);
	border: 3px dashed #ccc;
	border-radius: 8px;
	text-align: center;
	position: relative;
	height: 40vh;
	line-height: 40vh;
}

input[type="file"] + .chosen {
	opacity: 0.5;
}

.options button {
	float: right;
	font-family: "Raleway", sans-serif;
	font-weight: 600;
	background: white;
	border: 0px;
	border-radius: 0.5em;
	padding: 0.5em;
	transition: all 5ms ease; 
}
.options button:active{
	background: rgba(255,255,255,0.5);
	
}

button {
	font-family: "Raleway", sans-serif;
	background-color: transparent;
	color: white;
	font-size: 1.25em;
	font-weight: bold;
	padding: 1em;
	border: 2px solid white;
	border-radius: 1em;
	transition: all 0.55s ease-in-out;
}

button:hover {
	background-color: white;
	color: black;
}

button:disabled {
	border-color: #717171;
	color: #717171;
}

/** Result Formatting **/

#result.desc {
	visibility: hidden;
	white-space: pre-line; /** normal but preserve new lines **/
}

#result.error_resp, #result.success_resp, #result.info_resp {
	font-size: 1.25em;
	font-weight: bold;
	visibility: visible;
}

.success_resp span {
	color: #00c853;
}

.error_resp {
	color: rgb(243, 108, 108);
} 

input[type="radio"] {
  display: none;
}

label:has(input[type="radio"]) {
  margin: 1em 0.5em;
  height: 2em;
  padding: 0.5em;
  border: 4px solid rgba(255, 255, 255, 0.1);
  border-radius: 2px;
  display: inline-flex;
  vertical-align: middle;
  line-height: 0.7em;
}
label:has(input[type="radio"]:checked) {
  border-color: rgba(255, 255, 255, 0.7);
}

